package com.poyrazaktas.bitirme.gen.entity;

public interface BaseModel {
    Long getId();
}
